Drop JDK 11 requirement. Add support and AGP 9+. Add AGP integration tests.
By moving to a reflection-based approach for retrieving AGP target properties it was possible to remove the JDK 11 requirement.
Integration tests was added to test min and max versions of AGP making sure the reflection is working.
We need to use the latest alpha release (1.5.0-alpha05) of Jetpack Microbenchmark to be able to support AGP 9, but it seems like it is working fine.