@@ -30,14 +30,6 @@ class Runner(
             .withArguments(*(defaultArguments() + kotlinNativeVersionParameter + tasks))
             .withGradleDistribution(gradleDistributionUri)
             .forwardStdError(System.err.bufferedWriter())
-            // Set to true to enabled debugging
-            // If enabled, this must be added to integration/build.gradle.kts
-            // tasks.tests {
-            //    jvmArgs(
-            //    "--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED",
-            //    "--add-opens", "java.base/java.util=ALL-UNNAMED"
-            //  )
-            .withDebug(false) // Set to true, to enable debugging when running integration tests.
             .run {
                 if (print) forwardStdOutput(System.out.bufferedWriter()) else this
             }
@@ -111,6 +103,12 @@ class Runner(
     fun generatedAndroidDir(targetName: String, filePath: String, fileTestAction: (File) -> Unit) {
         fileTestAction(
             projectDir.resolve("build/benchmarks/$targetName").resolve(filePath)
+        )
+    }
+
+    fun generatedOutputDir(targetName: String, filePath: String, fileTestAction: (File) -> Unit) {
+        fileTestAction(
+            projectDir.resolve("build/reports/benchmarks/$targetName").resolve(filePath)
         )
     }
 }
